[package]
name = "uran"
version = "11.5.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[dependencies]
axum = { version = "0.8.1", features = ["json", "query"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json", "cookies", "stream"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
regex = "1.11.1"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.39"
futures-util = "0.3.31"
dashmap = "6.1.0"
anyhow = "1.0.96"
uuid = { version = "1.15.1", features = ["v4"] }
