# Copyright 2026 NotVkontakte LLC (aka Lain)
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "uran"
version = "11.5.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[dependencies]
axum = { version = "0.8.8", features = ["json", "query"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "cookies", "stream"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
regex = "1.12.3"
base64 = "0.22.1"
hmac = "0.13.0"
sha2 = "0.11.0"
chrono = "0.4.44"
futures-util = "0.3.32"
dashmap = "6.1.0"
anyhow = "1.0.102"
uuid = { version = "1.23.0", features = ["v4"] }
